# pathlight

./: .gitignore  .replit  README.md  alter_results_table.py  auth_persistance.py  clients.py  fix_all_pursuit_users.py  fix_subscription.py  main.py  optimize_images.py  pathlight.db  pyproject.toml  replit.nix  run_subscription_migration.py
.clinerules/: 05-stytch.md  06-github-mcp-installation.md  content-seo-guidelines.md
app/: middleware.py  prompts.py
app/models/: __init__.py  database.py  models.py
app/routers/: __init__.py  ai.py  auth.py  form_responses.py  payments.py  results.py  users.py  web.py
app/routers/ai/: __init__.py  (+5 more)
app/static/: robots.txt  sitemap.xml
app/tasks/: README.md  __init__.py  subscription_cleanup.py
app/templates/: account.html  authenticate.html  base.html  cancel.html  form.html  index.html  login.html  logout.html  payment_success.html  register.html  research.html  results.html  success.html  tracking_body.html  tracking_head.html
memory-bank/: activeContext.md  blog-topics.md  database-migrations.md  guide-topics.md  productContext.md  progress.md  projectbrief.md  result-regeneration.md  systemPatterns.md  techContext.md
migrations/: run_all_migrations.py
migrations/general/: migrate_data.py
migrations/results/: alter_results_last_generated.py  db_migration_basic_plan.py  direct_migration.py  migrate_regeneration_count.py  run_migration.py
migrations/subscriptions/: migrate_subscription.py  run_subscription_migration.py
scripts/: sync_langsmith_prompts.py  upload_prompts.py
tests/: README.md  conftest.py
(+65 files in other folders)
